# chronology

./: .env  .gitignore  Cargo.toml  README.md
migrations/: 20210604162704_add_task_table.sql  20210604162704_add_tasks_table.sql  20210604171224_add_category_table.sql  20210604172255_add_task_table.sql  20210604174636_add_entry_table.sql
src/: category.rs  lib.rs  main.rs  task.rs  web.rs
tests/: db_test.rs  web_test.rs
